--- a/cli-tool.adoc
+++ b/cli-tool.adoc
@@ -6,6 +6,10 @@
 ghqはマシン内のGitリポジトリの保存場所を一括で管理するツールです。
 `git clone` の代わりに `ghq get` を使います。
 
+== hub
+hubはGitHubの操作をコマンドラインから実行するツールです。
+`hub create` や `hub pull-request` のように使います。
+
 == peco
 pecoはターミナルなどで使うインタラクティブなフィルタリングツールです。
 `ls | peco` などのようにパイプで渡します。
